Fixed collapsing tiles in IE

--- a/css/mine.css
+++ b/css/mine.css
@@ -24,3 +24,7 @@
   background-color: #928E4A; /* TUD helgroen */
   color: #fff;
 }
+
+.tile {
+  flex: 1 1 auto; /* IE fix */
+}
